# sch_robotics

./: Log  README.md  anything.py  notify  package.xml  plus_bashrc  use roslaunch
Final_project/: CMakeLists.txt  Log  plus_bashrc  sensor_info
Final_project/Problem/: Error
Final_project/log_screen/: log_doing
Problem/: notify
algorithm/: algorithm_subscriber.py  package.xml
algorithm/src/: algorithm_subscriber.py
common_msgs/: CMakeLists.txt
common_msgs/msg/: Mesgtype.msg
common_msgs/srv/: Servtype.srv
git/pose_publisher/: CMakeLists.txt
git/pose_publisher/launch/: moving_pose.launch  pose_array.launch
git/pose_publisher/rviz/: moving_pose.rviz  pose_array.rviz
git/pose_publisher/src/: main.py  pub_moving_pose.py  pub_pose_array.py
git/service_custom/: CMakeLists.txt  package.xml
git/service_custom/script/: service_server.py
git/test_py3/: CMakeLists.txt
git/topic_custom/: CMakeLists.txt
git/topic_simple/: CMakeLists.txt  package.xml
hw3/algorithm/: CMakeLists.txt
hw3/common_msgs/: CMakeLists.txt  package.xml
hw3/main/: README.md
pose_publisher/: package.xml
pose_publisher/launch/: How_to_use
pose_publisher/src/: pose2d.py  pose_plotter.py
self_drive/: package.xml
self_drive/src/: self_drive.py
sensor/: package.xml
sensor/src/: sensor_publisher.py
service_custom/script/: service_client.py
service_custom/srv/: AddTwoNum.srv
src/: avoider.py  avoider_2.py  stop.py  test_avoider.py  test_scan.py  test_wall_follower.py  wall_follower.py  wall_follower_2.py
test_py3/: package.xml
test_py3/src/: image_publisher.py
(+7 files in other folders)
