<?xml version="1.0"?>
<package format="2">
  <name>sensor</name>
  <version>0.0.0</version>
  <description>The sensor package</description>

  <maintainer email="kangnamgyusch@gmail.com">pi</maintainer>

  <license>Kang</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
